--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,23 @@ p {
   margin: 0px;
   padding: 0px;
 }
+
+.Recommendations {
+  border-style: solid;
+  border-color: #668;
+  border-radius: 10px;
+
+  padding: 10px 20px 20px 20px;
+  line-height: 10px;
+
+  margin: 0px 0px 0px 20px;
+
+  width: fit-content;
+}
+.Recommendations-list > a{
+  text-decoration: none;
+  color: inherit;
+  display: block;
+
+  line-height: 25px;
+}
