--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,110 @@ body {
   background-color: #222;
   color: #ccc;
 }
+.header {
+  background-color: #668;
+  width: 100%;
+  height: 50px;
+  position: relative;
+}
+.header > h1 {
+  top: -7px;
+  left: 50px;
+  position: absolute;
+}
+
+.GoalsList {
+  margin: 20px;
+  padding: 20px 20px;
+
+  width: fit-content;
+
+  border-style: solid;
+  border-color: #668;
+  border-radius: 10px;
+}
+.GoalsList-Header {
+  margin: 0px 20px 10px 20px;
+}
+.GoalsList-Header > h2,
+p {
+  display: inline-block;
+  text-indent: 5px;
+  margin: 0px;
+}
+.GoalsList > p {
+  text-align: right;
+  width: 100%;
+  padding: 10px 0px 0px 0px;
+}
+
+.Goal > div {
+  display: flex;
+  justify-content: space-between;
+}
+.Goal > div > button {
+  background-color: transparent;
+  color: inherit;
+  border: none;
+
+  display: block;
+  margin: 0px;
+  padding: 6px 0px 0px 10px;
+}
+.Goal > div > p {
+  background-color: transparent;
+  color: inherit;
+  border: none;
+
+  display: block;
+  margin: 0px;
+  padding: 0px;
+}
+
+.Recommendations {
+  border-style: solid;
+  border-color: #668;
+  border-radius: 10px;
+
+  padding: 10px 20px 20px 20px;
+  line-height: 10px;
+
+  margin: 0px 0px 0px 20px;
+
+  width: fit-content;
+}
+.Recommendations-list > a{
+  text-decoration: none;
+  color: inherit;
+  display: block;
+
+  line-height: 25px;
+}
+
+.Improvements{
+  border-style: solid;
+  border-color: #668;
+  border-radius: 10px;
+
+  padding: 10px 20px 15px 20px;
+  line-height: 20px;
+  
+  margin: 20px;
+  
+  width: fit-content;
+}
+.Improvement{
+  border-style: solid;
+  border-color: #668;
+  border-radius: 10px;
+
+  padding: 10px 20px 15px 20px;
+  line-height: 20px;
+  
+  margin: 20px;
+  
+  width: fit-content;
+}
+.Improvement > strong{
+  color: rgb(255, 133, 34);
+}
