--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components{
+  .border-main{ @apply 
+    border-2
+    border-solid
+    border-orange-400 
+    rounded
+  }
+  .bt-ref{ @apply 
+    flex
+    w-24 h-6 
+    text-orange-400
+    hover:text-orange-100
+    hover:bg-red-800
+    bg-red-900
+    rounded-md
+    justify-center
+  }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+}
+
+/* 
 body {
   margin: 0px;
   width: 100%;
@@ -114,4 +147,4 @@ p {
 
 div{
   white-space: pre-wrap;
-}
+} */
